--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,19 +1,19 @@
-<nav class="m-siteNavigation padding--sm m-animation-header">
-	<ul class="m-siteNavigation-list u-text--small u-listInline">
+<nav class="SiteNavigation padding--sm m-animation-header">
+	<ul class="SiteNavigation-list u-text--small u-listInline">
 		<li>
-			<a class="m-siteNavigation-link {% if page.siteNav == 'home' %}active{% endif %}" href="{{ site.baseurl }}/">Home</a>
+			<a class="SiteNavigation-link {% if page.siteNav == 'home' %}active{% endif %}" href="{{ site.baseurl }}/">Home</a>
 		</li>
 		<li>
-			<a class="m-siteNavigation-link {% if page.siteNav == 'work' %}active{% endif %}" href="{{ site.baseurl }}/work/">Work</a>
+			<a class="SiteNavigation-link {% if page.siteNav == 'work' %}active{% endif %}" href="{{ site.baseurl }}/work/">Work</a>
 		</li>
 		<li>
-			<a class="m-siteNavigation-link {% if page.siteNav == 'services' %}active{% endif %}" href="{{ site.baseurl }}/services/">Services</a>
+			<a class="SiteNavigation-link {% if page.siteNav == 'services' %}active{% endif %}" href="{{ site.baseurl }}/services/">Services</a>
 		</li>
 		<li>
-			<a class="m-siteNavigation-link {% if page.siteNav == 'blog' %}active{% endif %}" href="{{ site.baseurl }}/design-solutions/">Blog</a>
+			<a class="SiteNavigation-link {% if page.siteNav == 'blog' %}active{% endif %}" href="{{ site.baseurl }}/design-solutions/">Blog</a>
 		</li>
 		<li>
-			<a id="contactMe-openModal" class="m-siteNavigation-highlight">Contact Me</a>
+			<a id="contactMe-openModal" class="SiteNavigation-highlight">Contact Me</a>
 		</li>
 	</ul>
 </nav>
