--- a/_sass/base/typography.scss
+++ b/_sass/base/typography.scss
@@ -2,7 +2,7 @@ html {
 	font-family: $font_body;
 	font-size: $font_size;
 	line-height: $line_height;
-	color: $black_light;
+	color: $black;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
