--- a/_sass/base/variables.scss
+++ b/_sass/base/variables.scss
@@ -1,10 +1,9 @@
 // Colours
-$black:             #2f2f2f;
-$black_light:       #4f4f4f;
-$black_lightest:    #6f6f6f;
-$gray:              #999;
-$gray_light:        #bebebe;
-$gray_lightest:     #cecece;
+$black:             #1A2433;
+$black_lightest:    #6a707a;
+$gray:              #989ca3;
+$gray_light:        #bbbec2;
+$gray_lightest:     #d1d3d6;
 $off_white:         #eee;
 
 $yellow:            #fff200;
