--- a/_sass/components/code.scss
+++ b/_sass/components/code.scss
@@ -3,7 +3,7 @@ code {
 	background: $off_white;
 }
 pre {
-	background: $black_light;
+	background: $black;
 	padding: 0.35em 0.75em;
 	code {
 		padding: 0;
