--- a/_includes/me.html
+++ b/_includes/me.html
@@ -1,10 +1,19 @@
-<div class="m-heroText-hero row">
-	<div>
-		<p class="m-heroText-hello m-animation-1">Hi, I'm</p>
-		<h1 class="m-heroText-title m-animation-2">Morgan Carter</h1>
+<div class="HeroText">
+	<div class="HeroText-left">
+		<p class="HeroText-hello m-animation-1">Hi, I'm</p>
+		<h1 class="HeroText-title m-animation-2">Morgan Carter</h1>
 	</div>
-	<div>
-		<p class="m-heroText-paragraph m-animation-3">I’m a freelance digital product designer. I turn complex ideas into intuitive, beautiful products.</p>
-		<!-- <p class="m-heroText-paragraph m-animation-3">I’m a freelance product designer with a focus on creative problem solving.</p> -->
+	<div class="HeroText-right">
+		<p class="m-animation-3">
+			I’m a freelance digital product designer currently living in <strong>Sydney</strong>. I help startups and small businesses turn complex ideas into intuitive, beautiful products.
+		</p>
+
+		<p class="m-animation-4">
+			The products I’ve helped design have been used by <strong>Amazon</strong>, <strong>McDonalds</strong>, <strong>Nike</strong>, <strong>Qantas</strong>, <strong>NVidia</strong>, <strong>Telstra</strong>, <strong>NASA</strong> &amp; more.
+		</p>
+
+		<p class="m-animation-5">
+			Want to work together? <a class="js-contactMe-openModal"><strong>Contact me</strong></a>.
+		</p>
 	</div>
 </div>
