--- a/_sass/components/buttons.scss
+++ b/_sass/components/buttons.scss
@@ -51,11 +51,11 @@ button {
 		background: none;
 		color: inherit;
 		&:after {
-			background: -moz-linear-gradient(bottom,     transparent 0%, rgba($black_light, 0.33) 0%, rgba($black_light, 0.33) 10%, transparent 10%, transparent 100%); /* FF3.6+ */
-			background: -webkit-linear-gradient(bottom,  transparent 0%, rgba($black_light, 0.33) 0%, rgba($black_light, 0.33) 10%, transparent 10%, transparent 100%); /* Chrome10+,Safari5.1+ */
-			background: -o-linear-gradient(bottom,       transparent 0%, rgba($black_light, 0.33) 0%, rgba($black_light, 0.33) 10%, transparent 10%, transparent 100%); /* Opera 11.10+ */
-			background: -ms-linear-gradient(bottom,      transparent 0%, rgba($black_light, 0.33) 0%, rgba($black_light, 0.33) 10%, transparent 10%, transparent 100%); /* IE10+ */
-			background: linear-gradient(to top,          transparent 0%, rgba($black_light, 0.33) 0%, rgba($black_light, 0.33) 10%, transparent 10%, transparent 100%); /* W3C */
+			background: -moz-linear-gradient(bottom,     transparent 0%, rgba($black, 0.33) 0%, rgba($black, 0.33) 10%, transparent 10%, transparent 100%); /* FF3.6+ */
+			background: -webkit-linear-gradient(bottom,  transparent 0%, rgba($black, 0.33) 0%, rgba($black, 0.33) 10%, transparent 10%, transparent 100%); /* Chrome10+,Safari5.1+ */
+			background: -o-linear-gradient(bottom,       transparent 0%, rgba($black, 0.33) 0%, rgba($black, 0.33) 10%, transparent 10%, transparent 100%); /* Opera 11.10+ */
+			background: -ms-linear-gradient(bottom,      transparent 0%, rgba($black, 0.33) 0%, rgba($black, 0.33) 10%, transparent 10%, transparent 100%); /* IE10+ */
+			background: linear-gradient(to top,          transparent 0%, rgba($black, 0.33) 0%, rgba($black, 0.33) 10%, transparent 10%, transparent 100%); /* W3C */
 		}
 	}
 	&[disabled],
