--- a/_sass/modules/animation.scss
+++ b/_sass/modules/animation.scss
@@ -45,6 +45,10 @@
 	.m-post-content > * {
 		@include prefix(transition, opacity 3.5s 0.6s);
 	}
+	.m-animation-7,
+	.m-post-content > * {
+		@include prefix(transition, opacity 4s 0.7s);
+	}
 	.m-animation-1,
 	.m-animation-2,
 	.m-animation-3,
@@ -52,6 +56,7 @@
 	.m-animation-5,
 	.m-animation-6,
 	.m-animation-7,
+	.m-animation-8,
 	.m-post-content > * {
 		opacity: 1;
 	}
