--- a/_sass/modules/heroText.scss
+++ b/_sass/modules/heroText.scss
@@ -1,96 +1,51 @@
-.m-heroText-hero {
-	margin-top: $rhythm;
-	margin-left: auto;
-	margin-right: auto;
-	max-width: 780px;
-	> div {
-		display: table-cell;
-		padding-left: $rhythm / 2;
-		padding-right: $rhythm / 2;
-		&:first-child {
-			vertical-align: top;
-		}
-		&:last-child {
-			vertical-align: bottom;
-			width: 100%;
-		}
-	}
+.HeroText {
+	@include flexbox();
+	@include align-items(flex-start);
+	max-width: 880px;
+	margin: auto;
 }
-.m-heroText-hello {
-	position: absolute;
-	margin-top: -$rhythm;
-	margin-left: $rhythm / 4;
+.HeroText-left {
+	width: 320px;
 }
-.m-heroText-hello--aLittleBit {
-	margin-left: $rhythm;
+.HeroText-hello {
+	margin-left: 5px;
+	margin-bottom: 5px;
 }
-.m-heroText-title {
+.HeroText-title {
 	margin-top: 0;
+	line-height: 1;
 	text-align: right;
-	font-size: 4rem;
-	line-height: 4.05rem;
-	position: relative;
-	top: 10px;
 }
-.m-heroText-paragraph {
-	font-size: 1.5rem;
+.HeroText-right {
+	@include flex-grow(1);
+	font-size: 1.25rem;
 	line-height: 2rem;
-	position: relative;
-	top: 1px;
-	a {
-		border-width: 3px;
-		line-height: 1.1;
-	}
+	margin-top: 61px;
+	padding-left: $rhythm;
 }
-.m-heroText-br {
-	// display: none;
-}
-.m-heroText-enabled {
-	color: $green_text;
-}
-
 @media (max-width: 1023px) {
-	.m-heroText-hero {
-		> div {
-			display: table;
-			margin-top: 0;
-		}
-	}
-	.m-heroText-hello,
-	.m-heroText-paragraph {
-		margin-left: 0.3rem;
-	}
-	.m-heroText-title {
-		top: 0;
-		margin: 0.5rem 0;
-	}
-	.m-heroText-title,
-	.m-heroText-paragraph {
-		text-align: left;
-	}
-	.m-heroText-br {
-		display: inline;
+	.HeroText-right {
+		margin-top: 51px;
 	}
 }
 @media (max-width: 767px) {
-	.m-heroText-hero {
+	.HeroText {
+		display: block;
+	}
+	.HeroText-left {
+		width: 100%;
+	}
+	.HeroText-title {
+		text-align: left;
+	}
+	.HeroText-hello {
+		margin-left: 2px;
+		margin-bottom: 2px;
+	}
+	.HeroText-right {
 		margin-top: 0;
-		> div {
-			display: block;
-			margin-left: auto;
-			margin-right: auto;
-			padding: 0;
-		}
-	}
-	.m-heroText-hello--aLittleBit {
-		margin-left: $rhythm / 2;
-	}
-	.m-heroText-title {
-		font-size: 3rem;
-		line-height: 1;
-	}
-	.m-heroText-paragraph {
-		font-size: 1rem;
-		line-height: $rhythm;
+		padding-left: 0;
+		padding-top: $rhythm / 2;
+		max-width: 530px;
 	}
 }
