--- a/_sass/modules/latestWork.scss
+++ b/_sass/modules/latestWork.scss
@@ -1,6 +1,6 @@
 .m-latestWork-wrapper {
 	max-width: 880px;
-	margin: 10% auto 0;
+	margin: 2*$rhythm auto 0;
 	@include clearfix();
 }
 .m-latestWork {
