--- a/_sass/modules/heroText.scss
+++ b/_sass/modules/heroText.scss
@@ -2,7 +2,8 @@
 	@include flexbox();
 	@include align-items(flex-start);
 	max-width: 880px;
-	margin: auto;
+	margin-left: auto;
+	margin-right: auto;
 }
 .HeroText-left {
 	width: 320px;
