--- a/_sass/modules/home.scss
+++ b/_sass/modules/home.scss
@@ -1,11 +1,12 @@
-.m-home-wrapper {
+.Home-wrapper {
 	width: 65%;
 	padding: 1rem $rhythm;
+	min-height: calc(100vh - 49px);
+	@include flexbox();
+	@include flex-direction(column);
+	@include justify-content(center);
 }
-.m-home-wrapper--invert {
-	display: none;
-}
-.m-home-me {
+.Home-me {
 	width: 30%;
 	background-image: url('/assets/images/home/new_me.jpg');
 	background-size: cover;
@@ -16,7 +17,7 @@
 	right: 0;
 	bottom: 0;
 }
-.m-home-laptop {
+.Home-laptop {
 	width: 150px;
 	img {
 		border-radius: 0;
@@ -29,31 +30,36 @@
 }
 
 @media (max-width: 1600px) {
-	.m-home-wrapper {
+	.Home-wrapper {
 		width: 70%;
 	}
 }
 
 @media (max-width: 1280px) {
-	.m-home-wrapper {
+	.Home-wrapper {
 		width: 75%;
 	}
-	.m-home-me {
+	.Home-me {
 		width: 25%;
 	}
 }
 
 @media (max-width: 1080px) {
-	.m-home-wrapper {
+	.Home-wrapper {
 		width: 100%;
 	}
-	.m-home-me {
+	.Home-me {
 		display: none;
+	}
+}
+@media (max-width: 1023px) {
+	.Home-wrapper {
+		display: block;
 	}
 }
 
 @media (max-width: 400px) {
-	.m-home-laptop {
+	.Home-laptop {
 		width: 130px;
 		img {
 			width: 150px;
