add bg colour to image when its loading

--- a/_sass/modules/home.scss
+++ b/_sass/modules/home.scss
@@ -8,6 +8,7 @@
 }
 .Home-me {
 	width: 30%;
+	background-color: #32394c;
 	background-image: url('/assets/images/home/new_me.jpg');
 	background-size: cover;
 	background-position: 40% 50%;
