--- a/_includes/video.html
+++ b/_includes/video.html
@@ -1,5 +1,5 @@
 <figure class="video-figure">
-	<div class="video-wrapper now-loading">	
+	<div class="figure-content">
 		<video loop muted>
 			<source data-src="{{ include.url }}" type="video/mp4">
 		</video>
