--- a/assets/css/my.scss
+++ b/assets/css/my.scss
@@ -19,6 +19,7 @@
 
 // Components
 @import '2_components/defaults';
+@import '2_components/figure';
 @import '2_components/image';
 @import '2_components/video';
 // @import 'components/buttons';
