--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,4 +1,4 @@
-<figure class="image-figure {% if include.description %}image--withDescription{% endif %} {% if include.pull %}figure--{{include.pull}}{% endif %}">
+<figure class="image-figure {% if include.pull %}figure--{{include.pull}}{% endif %}">
 	<div class="figure-content">
 		<img src="{{ include.url }}" alt="{{ include.description }}">
 	</div>
