--- a/_sass/1_core/variables.scss
+++ b/_sass/1_core/variables.scss
@@ -28,7 +28,7 @@ $text-muted:				#818CA2;
 // $colors:					$blue, $green, $orange, $red, $yellow, $purple;
 
 // Typography
-$font-header:				"Domaine-Display-Web";
+$font-header:				"Nocturno Display", "Domaine-Display-Web";
 $font-sans:					"Marat-Sans-Web";
 $font-serif:				"Marat-Web";
 $font-mono:					"Vulf Mono";
