--- a/assets/css/my.scss
+++ b/assets/css/my.scss
@@ -22,6 +22,7 @@
 @import '2_components/figure';
 @import '2_components/image';
 @import '2_components/video';
+@import '2_components/carousel';
 // @import 'components/buttons';
 // @import 'components/code';
 
