--- a/_sass/2_components/video.scss
+++ b/_sass/2_components/video.scss
@@ -1,6 +1,7 @@
 .video-scrubber {
 	background: rgba($text-dark, 0.25);
 	width: 100%;
+	margin-top: $spacing-xs;
 	height: 2rem;
 	cursor: pointer;
 	overflow: hidden;
