--- a/_sass/1_core/icons.scss
+++ b/_sass/1_core/icons.scss
@@ -15,3 +15,7 @@
     -webkit-font-feature-settings: 'liga';
     -webkit-font-smoothing: antialiased;
 }
+.icon {
+    width: 24px;
+    height: 24px;
+}
