--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -1,4 +1,4 @@
-<figure class="carousel-figure {% if include.pull %}figure--{{include.pull}}{% endif %}">
+<figure class="carousel-figure {% if include.style %}figure--{{include.style}}{% endif %}">
 	<div class="figure-content">
 		<div class="carousel">
 			<div class="carousel-frame">
@@ -6,26 +6,41 @@
 					{% if include.image1 %}
 						<li class="carousel-listItem">
 							<img src="{{ include.image1 }}">
+							<figcaption>
+								<p class="js-carouselItemCaption">{{ include.image1_description }}</p>
+							</figcaption>
 						</li>
 					{% endif %}
 					{% if include.image2 %}
 						<li class="carousel-listItem">
 							<img src="{{ include.image2 }}">
+							<figcaption>
+								<p class="js-carouselItemCaption">{{ include.image2_description }}</p>
+							</figcaption>
 						</li>
 					{% endif %}
 					{% if include.image3 %}
 						<li class="carousel-listItem">
 							<img src="{{ include.image3 }}">
+							<figcaption>
+								<p class="js-carouselItemCaption">{{ include.image3_description }}</p>
+							</figcaption>
 						</li>
 					{% endif %}
 					{% if include.image4 %}
 						<li class="carousel-listItem">
 							<img src="{{ include.image4 }}">
+							<figcaption>
+								<p class="js-carouselItemCaption">{{ include.image4_description }}</p>
+							</figcaption>
 						</li>
 					{% endif %}
 					{% if include.image5 %}
 						<li class="carousel-listItem">
 							<img src="{{ include.image5 }}">
+							<figcaption>
+								<p class="js-carouselItemCaption">{{ include.image5_description }}</p>
+							</figcaption>
 						</li>
 					{% endif %}
 				</ul>
@@ -40,6 +55,12 @@
 		</div>
 	</div>
 	{% if include.description %}
-		<figcaption>{{ include.description }}</figcaption>
+		<figcaption>
+			<p>{{ include.description }}</p>
+		</figcaption>
+	{% elsif include.image1_description %}
+		<figcaption>
+			<p class="js-carouselCaption">{{ include.image1_description }}</p>
+		</figcaption>
 	{% endif %}
 </figure>
