--- a/_sass/1_core/typography.scss
+++ b/_sass/1_core/typography.scss
@@ -3,6 +3,7 @@ html {
 }
 body {
 	font-size: $fontSize-md;
+	font-size: 16px;
 	font-family: $font-sans;
 	line-height: $font-lineHeight;
 	color: $text-dark;
@@ -13,15 +14,6 @@ h2, .h2,
 h3, .h3,
 h4, .h4 {
 	line-height: $font-lineHeight-header;
-	p,
-	ul,
-	ol {
-		font-size: $fontSize-md;
-		&:first-child {
-			margin-top: 0;
-			font-size: inherit;
-		}
-	}
 	+ p {
 		margin-top: $spacing-xs;
 	}
@@ -29,14 +21,20 @@ h4, .h4 {
 h1,
 .h1 {
 	font-family: $font-header;
-	font-size: 40px;
+	font-size: 48px;
 	font-weight: 400;
+	line-height: 1;
+	text-align: left;
+	max-width: 1024px;
 }
 h2,
 .h2 {
 	font-family: $font-sans;
-	font-size: 3rem;
-	font-weight: 600;
+	font-size: 2rem;
+	font-weight: 500;
+	p {
+		margin-top: $spacing-xxs;
+	}
 }
 h3,
 .h3 {
@@ -46,11 +44,11 @@ h3,
 }
 h4,
 .h4 {
-	font-size: 1.25rem;
-	font-weight: bold;
-	margin-top: $spacing-lg;
-	margin-bottom: $spacing-xs;
-	padding-left: $spacing-sm;
+	font-size: 1.5rem;
+	font-weight: 500;
+	p {
+		margin-top: $spacing-xxs;
+	}
 }
 h5,
 .h5 {
@@ -68,14 +66,6 @@ p {
 	max-width: $container-sm;
 	&:first-child {
 		margin-top: 0;
-	}
-	&:first-child:first-letter {
-		font-family: $font-mono;
-		float: left;
-		font-size: 3em;
-		font-weight: 100;
-		line-height: 1;
-		margin: 5px 4px -5px 0;
 	}
 }
 
@@ -99,7 +89,22 @@ blockquote {
 
 
 @media (min-width: $media-lg) {
+	body {
+		font-size: 18px;
+	}
 	h1 {
-		font-size: 8rem;
+		font-size: 6rem;
+	}
+	h2,
+	.h2 {
+		font-size: 48px;
+	}
+	h3,
+	.h3 {
+		font-size: 1.5rem;
+	}
+	h4,
+	.h4 {
+		font-size: 32px;
 	}
 }
