--- a/_sass/1_core/variables.scss
+++ b/_sass/1_core/variables.scss
@@ -11,9 +11,12 @@
 $mono-95:					#EDEFF2;
 // $mono-98:					#F7F8FA;
 
+$background:				#e1ddd4;
+
 $blue:						#135ECE;
 
 $text-dark:					#182235;
+$text-dark:					#333;
 $text-muted:				#818CA2;
 
 // $info:						$blue;
@@ -28,9 +31,10 @@ $text-muted:				#818CA2;
 // $colors:					$blue, $green, $orange, $red, $yellow, $purple;
 
 // Typography
-$font-header:				"Nocturno Display", "Domaine-Display-Web";
-$font-sans:					"Marat-Sans-Web";
-$font-serif:				"Marat-Web";
+$font-header:				"Ogg-Web", "Ogg";
+$font-sans:					"GT America Trial";
+$font-serif:				"Ivar-Text-Web", "DEMO", "Marat-Web";
+$font-serif-header:			"Ivar-Headline-Web", "DEMO", "Marat-Web";
 $font-mono:					"Vulf Mono";
 $font-system:               -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
 
@@ -47,8 +51,7 @@ $letterSpacing-wide:        0.01em;
 $letterSpacing-condensed:   -0.01em;
 
 // Layout
-$spacing-xxl:               6rem;
-$spacing-xl:                4rem;
+$spacing-xl:                2.5rem;
 $spacing-lg:                2rem;
 $spacing-md:                1.5rem;
 $spacing-sm:                1rem;
@@ -57,7 +60,22 @@ $spacing-xxs:               0.25rem;
 $spacing-names:             "0", "xxs", "xs", "sm", "md", "lg", "xl";
 $spacing-directions:        "", "-top", "-left", "-right", "-bottom";
 $spacing-amounts:           0, $spacing-xxs, $spacing-xs, $spacing-sm, $spacing-md, $spacing-lg, $spacing-xl;
-$spacing-amounts--lg:       0, $spacing-xxs, $spacing-xs, $spacing-sm, $spacing-md, $spacing-xl, $spacing-xxl;
+
+$whitespace-names:          "0", "sm", "md", "lg";
+$whitespace-amounts-mobile:  0, 1rem, 2rem, 4rem;
+$whitespace-amounts-ipad:    0, 1.5rem, 3rem, 6rem;
+$whitespace-amounts-desktop: 0, 2rem, 4rem, 8rem;
+
+$media-xxl:                 1440px;
+$media-xl:                  1280px;
+$media-laptop:				1100px;
+$media-lg:                  1024px;
+$media-md:                  768px;
+$media-sm:                  568px;
+$media-xs:                  400px;
+$media-xxs:                 350px;
+$media-names:               'xs', 'sm', 'md', 'lg', 'xl';
+$media-amounts:             $media-xs, $media-sm, $media-md, $media-lg, $media-xl;
 
 $container-xl:              1600px;
 $container-lg:              1344px;
@@ -69,15 +87,6 @@ $container-xxs:             400px;
 $modal-md:                  568px;
 $modal-lg:                  768px;
 $modal-sm:                  400px;
-
-$media-xl:                  1280px;
-$media-lg:                  1024px;
-$media-md:                  768px;
-$media-sm:                  568px;
-$media-xs:                  400px;
-$media-xxs:                 370px;
-$media-names:               'xs', 'sm', 'md', 'lg', 'xl';
-$media-amounts:             $media-xs, $media-sm, $media-md, $media-lg, $media-xl;
 
 // Border Radius
 // $borderRadius-lg:           1rem;
