--- a/_sass/2_components/figure.scss
+++ b/_sass/2_components/figure.scss
@@ -1,52 +1,29 @@
 figure {
-	margin-top: -2rem;
-	margin-bottom: -2rem;
 	+ p {
 		margin-top: 4rem;
 	}
 }
 
 figure {
-	@include flexbox();
-	@include align-items(center);
-	margin-left: calc(-100% - 2*#{$spacing-lg});
 	.figure-content {
-		width: 50%;
-		padding-right: $spacing-lg;
+		width: 100%;
 	}
 	figcaption {
 		position: relative;
-		width: 25%;
-		padding-left: $spacing-lg;
-		&:before {
-			content: "";
-			position: absolute;
-			top: 10px;
-			right: 100%;
-			margin-right: -$spacing-lg;
-			width: #{2 * $spacing-lg};
-			height: 1px;
-			background: $text-dark;
+		p {
+			display: table;
+			margin: auto;
+			&:before {
+				content: "—";
+			}
 		}
 	}
 }
 
-.figure--right {
-	margin-top: 0;
-	margin-bottom: 0;
-	figcaption {
-		@include order(-1);
-		margin-left: 25%;
-		padding-left: 0;
-		padding-right: $spacing-lg;
-		&:before {
-			left: 100%;
-			margin-left: -$spacing-lg;
-		}
-	}
+.figure--full {
 	.figure-content {
-		padding-left: $spacing-lg;
-		padding-right: 0;
+		width: 100%;
+		padding: 0;
 	}
 }
 
@@ -64,5 +41,59 @@ figcaption {
 		width: 640px;
 		height: 400px;
 
+	}
+}
+
+
+@media (min-width: $media-lg) {
+	figure {
+		figcaption {
+			position: absolute;
+			top: 40%;
+			width: 50%;
+			p {
+				display: inline;
+				background: $background;
+				padding: 0 $spacing-sm;
+    			-webkit-box-decoration-break: clone;
+				box-decoration-break: clone;
+				&:before {
+					content: none;
+				}
+			}
+			&:before {
+				content: "";
+				position: absolute;
+				top: 10px;
+				height: 1px;
+				background: $text-dark;
+				z-index: -1;
+			}
+		}
+	}
+	.figure--left {
+		figcaption {
+			left: 100%;
+			p {
+				float: right;
+				padding-left: $spacing-xs;
+			}
+			&:before {
+				right: 0;
+				left: -12rem;
+			}
+		}
+	}
+	.figure--right {
+		figcaption {
+			right: 100%;
+			p {
+				padding-right: $spacing-xs;
+			}
+			&:before {
+				left: 0;
+				right: -12rem;
+			}
+		}
 	}
 }
