--- a/_sass/3_modules/Page.scss
+++ b/_sass/3_modules/Page.scss
@@ -1,60 +1,112 @@
 .Page {
 	padding: $spacing-sm;
-	h2 {
-		margin-top: 2em;
-	}
-	li {
-		margin-top: $spacing-sm;
-	}
-	ul:not(.carousel-list) {
-		li {
-			&:before {
-				content: "→";
-				display: inline-block;
-				font-family: $font-mono;
-				width: $spacing-md;
-				margin-left: -$spacing-md;
-			}
+}
+.Page-hero {
+	// @include flexbox();
+	// @include align-items(flex-end);
+	margin-top: $spacing-lg;
+	margin-bottom: $spacing-lg;
+	text-align: center;
+	> div {
+		width: 50%;
+		&:first-child {
+			padding-right: $spacing-lg;
 		}
-	}
-	ol {
-		list-style: decimal;
+		&:last-child {
+			padding-left: $spacing-lg;
+		}
 	}
 }
-.Page--split {
-	.Page-container {
-		@include flexbox();
-		@include flex-direction(column);
-	}
-	.Page-hero {
-		@include flexbox();
-		@include align-items(flex-end);
-		margin-bottom: $spacing-xl;
-		> div {
-			width: 50%;
-			&:first-child {
-				padding-right: $spacing-lg;
-			}
-			&:last-child {
-				padding-left: $spacing-lg;
+.Page-subhero {
+	.button {
+		@include inline-flex();
+		text-align: center;
+		vertical-align: middle;
+		line-height: normal;
+		touch-action: manipulation;
+		cursor: pointer;
+		white-space: nowrap;
+		background: none;
+		@include noSelect();
+		border: none;
+
+		position: relative;
+		height: 40px;
+		font-weight: 500;
+		padding: 0 $spacing-md;
+		&:before {
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 0;
+			bottom: 0;
+			width: 40px;
+			height: 40px;
+			background: rgba($text-dark, 0.1);
+			transition: 0.25s ease-in-out;
+		}
+		&:hover {
+			&:before {
+				width: 100%;
+
 			}
 		}
 	}
-	.Page-content {
-		width: 50%;
-		margin-left: auto;
-		padding-left: $spacing-lg;
+}
+.Page-jumpLinks {
+	li + li {
+		margin-top: $spacing-md;
 	}
+	.Page-jumpLinks-title {
+		margin-left: 40px;
+	}
+	a {
+		@include flexbox();
+		@include align-items(center);
+	}
+	.icon {
+		margin-right: $spacing-sm;
+	}
+}
+.Page-section {
+	margin-top: 6rem;
+	padding-top: 6rem;
+	border-top: 1px solid rgba($text-dark, 0.1);
 }
 
 @media (min-width: $media-md) {
 	.Page {
 		padding: $spacing-md;
+		li {
+			margin-left: 0;
+		}
+	}
+	.Page-hero {
+		margin-top: $spacing-xl;
+		margin-bottom: $spacing-xl;
+	}
+	.Page--split {
+		.Page-container {
+			@include flexbox();
+			@include flex-direction(column);
+		}
+		.Page-content {
+			// width: 50%;
+			// margin-left: auto;
+			// padding-right: $spacing-lg;
+			h2 {
+				// margin-right: -704px;
+			}
+		}
 	}
 }
 
 @media (min-width: $media-lg) {
 	.Page {
 		padding: $spacing-lg;
+	}
+	.Page-hero {
+		// margin-top: 2*$spacing-xl;
+		// margin-bottom: 2*$spacing-xl;
 	}
 }
