--- a/_sass/2_components/figure.scss
+++ b/_sass/2_components/figure.scss
@@ -37,6 +37,9 @@ figcaption {
 	&.now-loading {
 		// background: red;
 	}
+	img {
+		margin: auto;
+	}
 	video {
 		width: 640px;
 		height: 400px;
