--- a/_sass/3_modules/Page.scss
+++ b/_sass/3_modules/Page.scss
@@ -54,6 +54,9 @@
 	}
 }
 .Page-jumpLinks {
+	font-size: $fontSize-md;
+	font-family: $font-system;
+	font-weight: 500;
 	li + li {
 		margin-top: $spacing-md;
 	}
