--- a/_sass/1_core/variables.scss
+++ b/_sass/1_core/variables.scss
@@ -33,13 +33,14 @@ $text-muted:				#818CA2;
 // Typography
 $font-header:				"Ogg-Web", "Ogg";
 $font-sans:					"GT America Trial";
-$font-serif:				"Ivar-Text-Web", "DEMO", "Marat-Web";
-$font-serif-header:			"Ivar-Headline-Web", "DEMO", "Marat-Web";
+$font-serif:				"Domaine Text Test", "Ivar-Text-Web", "DEMO", "Marat-Web";
+$font-serif-header:			"Domaine Display Test", "Ivar-Headline-Web", "DEMO", "Marat-Web";
 $font-mono:					"Vulf Mono";
 $font-system:               -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
 
 $fontSize-sm:				14px;
-$fontSize-md:				18px;
+$fontSize-md:				16px;
+$fontSize-lg:				18px;
 // $fontSize-lg:				18px;
 // $fontSize-xl:				21px;
 
