new blue color, update images

--- a/_sass/1_core/variables.scss
+++ b/_sass/1_core/variables.scss
@@ -13,7 +13,7 @@ $mono-95:					#EDEFF2;
 
 $background:				#e1ddd4;
 
-$blue:						#135ECE;
+$blue:						#0e4ead;
 
 $text-dark:					#182235;
 $text-dark:					#333;
