--- a/_sass/3_modules/Page.scss
+++ b/_sass/3_modules/Page.scss
@@ -32,7 +32,9 @@
 
 		position: relative;
 		height: 40px;
-		font-weight: 500;
+		font-weight: 600;
+		font-style: italic;
+		font-family: $font-system;
 		padding: 0 $spacing-md;
 		&:before {
 			content: "";
@@ -72,8 +74,8 @@
 	}
 }
 .Page-section {
-	margin-top: 6rem;
-	padding-top: 6rem;
+	margin-top: 8rem;
+	padding-top: 8rem;
 	border-top: 1px solid rgba($text-dark, 0.1);
 }
 
