--- a/assets/css/my.scss
+++ b/assets/css/my.scss
@@ -24,7 +24,7 @@
 @import '2_components/image';
 @import '2_components/video';
 @import '2_components/carousel';
-// @import 'components/buttons';
+@import '2_components/buttons';
 // @import 'components/code';
 
 // // Plugins
@@ -34,6 +34,7 @@
 @import '3_modules/Page';
 @import '3_modules/Navbar';
 @import '3_modules/Essay';
+@import '3_modules/Work';
 // @import 'modules/blogPost';
 // @import 'modules/form';
 // @import 'modules/heroText';
