--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,27 +7,33 @@
 
 
 	<!-- Social Sharing -->
-	{% if page.description %}
-		<title>{{ page.title }} — {{ site.title }}</title>
+	{% if page.title %}
+		<title>{{ page.title }} · {{ site.title }}</title>
 		<meta name="twitter:title"       content="{{ page.title }} — {{ site.title }}">
 		<meta property="og:title"        content="{{ page.title }} — {{ site.title }}">
-		<meta name="description"         content="{{ page.description }}">
-		<meta name="twitter:description" content="{{ page.description }}">
-		<meta property="og:description"  content="{{ page.description }}">
 	{% else %}
 		<title>{{ site.title }}</title>
 		<meta name="twitter:title"       content="{{ site.title }}">
 		<meta property="og:title"        content="{{ site.title }}">
+	{% endif %}
+
+	{% if page.description %}
+		<meta name="description"         content="{{ page.description }}">
+		<meta name="twitter:description" content="{{ page.description }}">
+		<meta property="og:description"  content="{{ page.description }}">
+	{% else %}
 		<meta name="description"         content="{{ site.description }}">
 		<meta name="twitter:description" content="{{ site.description }}">
 		<meta property="og:description"  content="{{ site.description }}">
 	{% endif %}
-		<meta name="twitter:card"            content="summary">
-		<meta property="og:type"             content="website">
-		<meta name="twitter:site"            content="{{ site.twitter_username }}">
-		<meta property="og:site_name"        content="Morgan Carter's Portfolio">
-		<meta property="og:url"              content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-		<link rel="canonical"                href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+
+	<meta name="twitter:card"            content="summary">
+	<meta property="og:type"             content="website">
+	<meta name="twitter:site"            content="{{ site.twitter_username }}">
+	<meta property="og:site_name"        content="Morgan Carter's Portfolio">
+	<meta property="og:url"              content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+	<link rel="canonical"                href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+
 	{% if page.image %}
 		<meta name="twitter:image"         content="{{ site.url }}/assets/images/{{ page.image }}">
 		<meta property="og:image"          content="{{ site.url }}/assets/images/{{ page.image }}">
