--- a/_includes/video.html
+++ b/_includes/video.html
@@ -1,6 +1,6 @@
-<figure class="video-figure">
+<figure class="video-figure {% if include.style %}figure--{{include.style}}{% endif %}">
 	<div class="figure-content">
-		<video loop muted>
+		<video loop muted {% if include.style %}width="{{include.width}}"{% endif %} {% if include.style %}height="{{include.height}}"{% endif %} >
 			<source data-src="{{ include.url }}" type="video/mp4">
 		</video>
 		<div class="video-controls">
@@ -10,6 +10,8 @@
 		</div>
 	</div>
 	{% if include.description %}
-		<figcaption>{{ include.description }}</figcaption>
+		<figcaption>
+			<p>{{ include.description }}</p>
+		</figcaption>
 	{% endif %}
 </figure>
