--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,12 +1,15 @@
 ---
 layout: default
 ---
-<div class="post">
-  <header class="post-header">
-    <h1 class="m-page-title">{{ page.title }}</h1>
-  </header>
 
-  <article class="post-content">
-    {{ content }}
-  </article>
+
+<div class="Page">
+	<div class="container">
+		<section class="Page-hero">
+			<h1>{{ page.title }}</h1>
+		</section>
+		<article class="Page-content">
+			{{ content }}
+		</article>
+	</div>
 </div>
