--- a/_sass/2_components/defaults.scss
+++ b/_sass/2_components/defaults.scss
@@ -18,9 +18,10 @@ ul.list-styled {
 }
 a {
 	color: $blue;
-	text-decoration: underline;
-	text-decoration-color: rgba($blue, 0.25);
+	padding: 1px 2px 2px;
+	margin: 0 -2px;
+	text-decoration: none;
 	&:hover {
-		text-decoration-color: $blue;
+		background: rgba($blue, 0.1);
 	}
 }
