get contact form working, get blog working, get contact page working, and some more revisions

--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -1,23 +1,14 @@
-<form class="m-form" action="//github.us10.list-manage.com/subscribe/post?u=15f6ef8e617910c50036c7ec3&amp;id=a980729ee7" method="post" name="mc-embedded-subscribe-form" target="_blank" novalidate>
-	<div class="container--xs">
-		<p class="m-form-title">Get emailed about design solutions.<br class="hidden--md-up"> No spam, ever.</p>
+<form class="bg-black color-bg whitespace--sm container container--md text-center" action="//github.us10.list-manage.com/subscribe/post?u=15f6ef8e617910c50036c7ec3&amp;id=a980729ee7" method="post" name="mc-embedded-subscribe-form" target="_blank" novalidate>
+	<h2 class="m-bottom--xs">Get emailed about design solutions.</h2>
+	<h3>No spam, ever.</h3>
 
-		<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups--><div style="position: absolute; left: -5000px;"><input type="text" name="b_15f6ef8e617910c50036c7ec3_a980729ee7" tabindex="-1" value=""></div>
+	<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups--><div style="position: absolute; left: -5000px;"><input type="text" name="b_15f6ef8e617910c50036c7ec3_a980729ee7" tabindex="-1" value=""></div>
 
-		<div class="m-form-table">
-			<div class="m-form-cell">
-				<div class="m-input-wrapper">
-					<label class="m-input-label" for="mce-EMAIL">My email is</label>
-					<div class="m-input">
-						<label class="m-input-placeholder" for="mce-EMAIL">Email address</label>
-						<input id="mce-EMAIL" type="email" value="" name="EMAIL" class="required email" placeholder="email@domain.com">
-					</div>
-					<label class="m-input-error" for="mce-EMAIL">Email address is required!</label>
-				</div>
-			</div>
-			<div class="m-form-cell m-form-cell--btn">
-				<button class="btn btn--modal btn--sm" data-text="Subscribe" name="subscribe" id="mc-embedded-subscribe"></button>
-			</div>
+	<div class="form-horizontal container container--xs">
+		<div class="input-wrapper input-wrapper--inverted">
+			<input id="mce-EMAIL" type="email" value="" name="EMAIL" class="input" placeholder="Email address">
+			<div class="input-interaction"></div>
 		</div>
+		<button class="button button--inverted" name="subscribe" id="mc-embedded-subscribe">Subscribe</button>
 	</div>
 </form>
