--- a/_sass/1_core/variables.scss
+++ b/_sass/1_core/variables.scss
@@ -14,6 +14,8 @@ $mono-95:					#EDEFF2;
 $background:				#e1ddd4;
 
 $blue:						#0e4ead;
+$green:						#0fad97;
+$red:						#b73636;
 
 $text-dark:					#182235;
 $text-dark:					#333;
@@ -41,8 +43,7 @@ $font-system:               -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,O
 $fontSize-sm:				14px;
 $fontSize-md:				16px;
 $fontSize-lg:				18px;
-// $fontSize-lg:				18px;
-// $fontSize-xl:				21px;
+$fontSize-xl:				24px;
 
 $font-lineHeight:           1.5;
 $font-lineHeight-tight:    	1.2;
