--- a/_sass/2_components/buttons.scss
+++ b/_sass/2_components/buttons.scss
@@ -18,21 +18,58 @@
 	font-style: italic;
 	font-family: $font-system;
 	padding: 9px $spacing-md;
-	&:before {
+	transition: 0.4s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+	z-index: 1;
+	&:before,
+	&:after {
 		content: "";
 		position: absolute;
 		top: 0;
-		left: 0;
 		bottom: 0;
-		width: 40px;
 		height: 40px;
 		background: rgba($text-dark, 0.1);
-		transition: 0.25s ease-in-out;
+		transition: 0.4s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+		z-index: -1;
 	}
-	&:hover {
+	&:before {
+		left: 0;
+		width: 40px;
+	}
+	&:after {
+		left: 40px;
+		width: calc(100% - 40px);
+		transform: scaleX(0);
+		transform-origin: 0 0;
+	}
+	&:hover,
+	&:focus {
+		color: $background;
 		background: none;
-		&:before {
-			width: 100%;
+		&:before,
+		&:after {
+			background: $text-dark;
+		}
+		&:after {
+			transform: scaleX(1);
+		}
+	}
+	&:active {
+		transform: scale(0.95);
+		transition: none;
+	}
+}
+.button--inverted {
+	color: $background;
+	&:before,
+	&:after {
+		background: rgba($background, 0.1);
+	}
+	&:hover,
+	&:focus {
+		color: $text-dark;
+		&:before,
+		&:after {
+			background: $background;
 		}
 	}
 }
