--- a/assets/css/my.scss
+++ b/assets/css/my.scss
@@ -25,7 +25,7 @@
 @import '2_components/video';
 @import '2_components/carousel';
 @import '2_components/buttons';
-// @import 'components/code';
+@import '2_components/inputs';
 
 // // Plugins
 // @import 'plugins/instantClick';
@@ -35,7 +35,7 @@
 @import '3_modules/Navbar';
 @import '3_modules/Essay';
 @import '3_modules/Work';
-// @import 'modules/blogPost';
+@import '3_modules/Blog';
 // @import 'modules/form';
 // @import 'modules/heroText';
 // @import 'modules/home';
@@ -53,7 +53,7 @@
 @import '4_utilities/font';
 @import '4_utilities/display';
 @import '4_utilities/layout';
-// @import 'utilities/typography';
+@import '4_utilities/text';
 
 
 
