--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,12 @@
 <nav class="Navbar">
 	<div class="container Navbar-container">
-		<a class="Navbar-link Navbar-link--title" href="{{ site.baseurl }}/">
-			Morgan Carter<span class="below-sm-hidden">’s Portfolio</span>
-		</a>
+		<ul class="Navbar-list">
+			<li>
+				<a class="Navbar-link Navbar-link--title" href="{{ site.baseurl }}/">
+					Morgan Carter<span class="below-sm-hidden">’s Portfolio</span>
+				</a>
+			</li>
+		</ul>
 		<ul class="Navbar-list">
 			<li>
 				<a class="Navbar-link {% if page.siteNav == 'home' %}now-active{% endif %} below-md-hidden" href="{{ site.baseurl }}/">About</a>
@@ -14,7 +18,7 @@
 				<a class="Navbar-link {% if page.siteNav == 'blog' %}now-active{% endif %}" href="{{ site.baseurl }}/design-solutions/">Writing</a>
 			</li>
 			<li>
-				<a class="Navbar-link Navbar-link--contact" id="contactMe-openModal">Contact Me</a>
+				<a class="Navbar-link Navbar-link--contact" href="{{ site.baseurl }}/contact/">Contact Me</a>
 			</li>
 		</ul>
 		<div class="below-lg-hidden"></div>
